# caffe2-bilinear-pooling

./: CMakeLists.txt  readme.md
pysrc/: test1.py
src/: bilinear_op.cc  bilinear_op.h  bilinear_op_gpu.cu
src/test/: find_storage_order.cc  test_main.cc  test_op.cc
